@@ -1052,7 +1052,7 @@ AC_DEFUN([SC_CONFIG_CFLAGS], [
 
     AC_CACHE_CHECK([if compiler supports visibility "hidden"],
 	tcl_cv_cc_visibility_hidden, [
-	hold_cflags=$CFLAGS; CFLAGS="$CFLAGS -fvisibility=hidden"
+	hold_cflags=$CFLAGS; CFLAGS="$CFLAGS -fvisibility=hidden -Werror"
 	AC_TRY_COMPILE(,, tcl_cv_cc_visibility_hidden=yes,
 	    tcl_cv_cc_visibility_hidden=no)
 	CFLAGS=$hold_cflags])
